2009-11-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_tasks.c:
   Add a simple popup menu to update the Tasks list and hide
   the Messages window.
 * src/addons.c, src/ao_tasks.c:
   Update the tasks list on startup only first the main window has been
   realized, i.e. Geany has finished the startup process.


2009-11-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/Makefile.am, src/tasks.c, src/tasks.h, src/ao_tasks.h,
   src/ao_tasks.c, src/addons.c:
   Complete rewrite of the Tasks Addon. Changes:
   - Works on all open documents, not only on the current one
   - Rescan for tokens only on document open/save/close
   - Add keybinding to activate the Tasks tab


2009-11-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ao_bookmarklist.c:
   Prevent updating the bookmark list if it is disabled.
 * src/Makefile.am, src/ao_markword.c, src/ao_markword.h, src/addons.c:
   Add 'Mark Word' addon.


2009-11-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/addons.c:
   Fix setting up keybindings.
 * src/ao_bookmarklist.c:
   Improve handling of the notebook page (closes #2889415).
   Add a popup menu to the Bookmark list to easily remove set bookmarks.
   Initally fill the Bookmark list after the plugin has been enabled.


2009-10-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/addons.c, src/ao_bookmarklist.c, src/ao_bookmarklist.h:
   Add an 'activate' keybinding.


2009-10-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/Makefile.am, src/addons.c, src/ao_bookmarklist.c,
   src/ao_bookmarklist.h:
   Add a simple bookmark list to the sidebar.


2009-10-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ao_doclist.c, src/addons.c:
   Fix switching to an untitled document with the tool button.


2009-10-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ao_doclist.c, src/addons.c:
   Use ui_menu_add_document_items().

